Added logging, fix bugs
RunCsJob now runs compilers from its directory, not from current.
Submissions' compiling  directory is configurable

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -17,7 +17,7 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=ANDGEIN-LAPTOP;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
+    	<add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings file="private.settings">
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
@@ -39,8 +39,8 @@
 		<add key="ulearn.coursesDirectory" value="" />
 		<add key="telegram-commentsbot-token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
 		<add key="telegram-commentsbot-channel" value="@ulearncommentsdev" />
-        <add key="SendGrid.Login" value="" />
-        <add key="SendGrid.Password" value="" />
+		<add key="SendGrid.Login" value="" />
+		<add key="SendGrid.Password" value="" />
 	</appSettings>
 	<log4net>
 		<root>
@@ -48,12 +48,12 @@
 			<appender-ref ref="FileAppender" />
 		</root>
 		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-			<file type="log4net.Util.PatternString" value="logs\\ulearn-%date{yyyy-MM-dd}.log" />
+			<file type="log4net.Util.PatternString" value="ulearn.log" />
 			<appendToFile value="true" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<encoding value="utf-8" />
 			<layout type="log4net.Layout.PatternLayout">
-				<param name="ConversionPattern" value="%date [%thread] %-5level %logger [%property{address}, %property{user}] — %newline → %message%newline" />
+				<param name="ConversionPattern" value="%date [%thread] %-5level %logger [%property{address}, %property{user}]:%newline → %message%newline" />
 			</layout>
 		</appender>
 	</log4net>
