--- a/src/RunCsJob.Service/App.config
+++ b/src/RunCsJob.Service/App.config
@@ -4,11 +4,15 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
   <appSettings>
+		<!-- Url to Ulearn.Web instance. I.E. https://ulearn.me -->
 		<add key="submissionsUrl" value="https://localhost:44300/"/>
+		<!-- Must be equal on Ulearn.Web and RunCsJob instance -->
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF"/>
 		<add key="sleepSeconds" value="1"/>
 		<add key="jobsToRequest" value="5"/>
-		<add key="threadsCount" value="2"/>
+		<add key="ulearn.runcsjob.threadsCount" value="1"/>
+		<!-- Directory for compiling msbuild solutions. By default it's ./submissions in current directory -->
+		<add key="ulearn.runcsjob.submissionsWorkingDirectory" value="" />
 	</appSettings>
 	<log4net>
 		<root>
@@ -23,7 +27,7 @@
 			</layout>
 		</appender>
 		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-			<file type="log4net.Util.PatternString" value="logs\\runcsjob-%date{yyyy-MM-dd}.log" />
+			<file type="log4net.Util.PatternString" value="runcsjob.log" />
 			<appendToFile value="true" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<encoding value="utf-8" />
