--- a/src/RunCsJob.Service/packages.config
+++ b/src/RunCsJob.Service/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="OctoPack" version="3.4.6" targetFramework="net461" developmentDependency="true" />
 </packages>
