--- a/src/RunCsJob.Service/RunCsJob.Service.csproj
+++ b/src/RunCsJob.Service/RunCsJob.Service.csproj
@@ -13,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -50,7 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RunCsJobService.cs" />
+    <Compile Include="RunCsJobService.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="RunCsJobService.Designer.cs">
       <DependentUpon>RunCsJobService.cs</DependentUpon>
     </Compile>
