Add real IP-address to logs
Add comments to Web.config

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -20,6 +20,7 @@
     	<add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings file="private.settings">
+		<!-- runnerToken должен совпадать в настройках Ulearn.Web и RunCsJob (или RunCsJob.Service в случае запуска через Windows-службу) -->
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -33,12 +34,17 @@
 		<add key="elmah.mvc.allowedRoles" value="*" />
 		<add key="elmah.mvc.allowedUsers" value="*" />
 		<add key="elmah.mvc.route" value="elmah" />
-		<add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
+		<add key="elmah.mvc.UserAuthCaseSensitive" value="true" />	
+		<!-- Данные для авторизации через ВКонтакте -->
 		<add key="owin.vk.appId" value="5333292" />
 		<add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
+		<!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
+			 Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
 		<add key="ulearn.coursesDirectory" value="" />
+		<!-- Данные для отправки новых комментариев в телеграм-канал -->
 		<add key="telegram-commentsbot-token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
 		<add key="telegram-commentsbot-channel" value="@ulearncommentsdev" />
+		<!-- SendGrid отправляет почту -->
 		<add key="SendGrid.Login" value="" />
 		<add key="SendGrid.Password" value="" />
 	</appSettings>
@@ -62,7 +68,7 @@
 		<compilation debug="true" targetFramework="4.5">
 			<assemblies>
 				<add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-				<add assembly="System.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" /> 	
+				<add assembly="System.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />	 
 				<add assembly="RunCsJob.Api" />
 			</assemblies>
 		</compilation>
