Added app settings ulearn.requireHttps
Change some logging settings

--- a/src/RunCsJob.Service/App.config
+++ b/src/RunCsJob.Service/App.config
@@ -26,8 +26,8 @@
 				<param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
 			</layout>
 		</appender>
-		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-			<file type="log4net.Util.PatternString" value="runcsjob.log" />
+		<appender name="FileAppender" type="log4net.Appender.FileAppender">
+			<file value="logs\\runcsjob.log" />
 			<appendToFile value="true" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<encoding value="utf-8" />
