--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -41,10 +41,12 @@
 		<!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
 			 Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
 		<add key="ulearn.coursesDirectory" value="" />
+		<!-- Если true, то все HTTP-запросы будут возвращать перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
+		<add key="ulearn.requireHttps" value="true" />
 		<!-- Данные для отправки новых комментариев в телеграм-канал -->
 		<add key="telegram-commentsbot-token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
 		<add key="telegram-commentsbot-channel" value="@ulearncommentsdev" />
-		<!-- SendGrid отправляет почту -->
+		<!-- Данные для отправки электронной почты с помощью SendGrid -->
 		<add key="SendGrid.Login" value="" />
 		<add key="SendGrid.Password" value="" />
 	</appSettings>
@@ -53,8 +55,8 @@
 			<level value="DEBUG" />
 			<appender-ref ref="FileAppender" />
 		</root>
-		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-			<file type="log4net.Util.PatternString" value="ulearn.log" />
+		<appender name="FileAppender" type="log4net.Appender.FileAppender">
+			<file value="logs\\ulearn.log" />
 			<appendToFile value="true" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<encoding value="utf-8" />
