--- a/src/RunCsJob.Service/App.Kontur.config
+++ b/src/RunCsJob.Service/App.Kontur.config
@@ -2,7 +2,7 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<log4net>
-		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
+		<appender name="FileAppender" type="log4net.Appender.FileAppender">
 			<file type="log4net.Util.PatternString" value="C:\\ulearn\\logs\\runcsjob-%date{yyyy-MM-dd}.log" xdt:Transform="SetAttributes" />
 		</appender>
 	</log4net>
