--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -19,7 +19,7 @@
 			<appender-ref ref="ConsoleAppender" />
 		</root>
 		<appender name="FileAppender" type="log4net.Appender.FileAppender">
-			<file value="runcsjob.log" />
+			<file value="logs\\runcsjob.log" />
 			<appendToFile value="true" />
 			<encoding value="utf-8" />
 			<layout type="log4net.Layout.PatternLayout">
