Synchronized run msbuild in one proccess
Add random suffix in RunCsJob for folders with submissions
Transaction for fetching unhandled submission
MachineKey for kontur-specific Web.config

--- a/src/uLearn.Web/Web.Kontur.config
+++ b/src/uLearn.Web/Web.Kontur.config
@@ -11,5 +11,11 @@
     <elmah>
 		<errorLog type="Elmah.XmlFileErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" logPath="C:\\ulearn\\logs\\elmah" xdt:Transform="SetAttributes" />
 	</elmah>
-
+	<system.web>
+		<machineKey
+		  validationKey="#{aspnet.machineKey.validationKey}"
+		  decryptionKey="#{aspnet.machineKey.decryptionKey}"
+		  validation="SHA1" decryption="AES"
+		/>
+	</system.web>
 </configuration>
