--- a/src/uLearn.Web/Web.Kontur.config
+++ b/src/uLearn.Web/Web.Kontur.config
@@ -16,6 +16,6 @@
 		  validationKey="#{aspnet.machineKey.validationKey}"
 		  decryptionKey="#{aspnet.machineKey.decryptionKey}"
 		  validation="SHA1" decryption="AES"
-		/>
+		xdt:Transform="Insert" />
 	</system.web>
 </configuration>
