Add manualChecking options for course and groups
Change slide page title
Fix bug with admin's link showing in Submission.cshtml for non-admin users
Fix bug with showing quiz status for guests
Fix bug in groups editor: opening new group' popup after group editing popup didn't erased form
Fix some styles

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -303,6 +303,10 @@
     <Compile Include="Migrations\201611161930289_RemoveTextBlobLimits.Designer.cs">
       <DependentUpon>201611161930289_RemoveTextBlobLimits.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612200725559_EnablingManualCheckingForGroups.cs" />
+    <Compile Include="Migrations\201612200725559_EnablingManualCheckingForGroups.Designer.cs">
+      <DependentUpon>201612200725559_EnablingManualCheckingForGroups.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\FilterOptions.cs" />
     <Compile Include="DataContexts\SlideCheckingsRepo.cs" />
     <Compile Include="Migrations\201608231750470_SlideChecking.cs" />
@@ -845,6 +849,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611161930289_RemoveTextBlobLimits.resx">
       <DependentUpon>201611161930289_RemoveTextBlobLimits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612200725559_EnablingManualCheckingForGroups.resx">
+      <DependentUpon>201612200725559_EnablingManualCheckingForGroups.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
