--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -22,10 +22,13 @@
 	<appSettings file="private.settings">
 		<!-- runnerToken должен совпадать в настройках Ulearn.Web и RunCsJob (или RunCsJob.Service в случае запуска через Windows-службу) -->
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
+
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+		<!-- Elmah (https://github.com/alexbeletsky/elmah-mvc) — это сборщик ошибок и исключений. Доступен админам по адресу /elmah -->
 		<add key="elmah.mvc.disableHandler" value="false" />
 		<add key="elmah.mvc.disableHandleErrorFilter" value="false" />
 		<!-- Управление доступом в самой Elmah не работает:  https://github.com/alexanderbeletsky/elmah-mvc/issues/28. Авторизация сделана средствами ASP.NET - см ниже -->
@@ -35,17 +38,26 @@
 		<add key="elmah.mvc.allowedUsers" value="*" />
 		<add key="elmah.mvc.route" value="elmah" />
 		<add key="elmah.mvc.UserAuthCaseSensitive" value="true" />	
+
 		<!-- Данные для авторизации через ВКонтакте -->
 		<add key="owin.vk.appId" value="5333292" />
 		<add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
+
 		<!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
 			 Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
 		<add key="ulearn.coursesDirectory" value="" />
-		<!-- Если true, то все HTTP-запросы будут возвращать перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
+		<!-- Папка с шаблонами сертификатов. По умолчанию — папка Certificates в корне веб-проекта. 
+			 Содержимое этой папки должно отдаваться веб-сервером по адресам /Certificates/* -->
+		<add key="ulearn.certificatesDirectory" value="" />
+
+		<!-- Если параметр ulearn.requireHttps равен true, то все HTTP-запросы будут возвращать
+			 перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
 		<add key="ulearn.requireHttps" value="true" />
+
 		<!-- Данные для отправки новых комментариев в телеграм-канал -->
 		<add key="telegram-commentsbot-token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
 		<add key="telegram-commentsbot-channel" value="@ulearncommentsdev" />
+
 		<!-- Данные для отправки электронной почты с помощью SendGrid -->
 		<add key="SendGrid.Login" value="" />
 		<add key="SendGrid.Password" value="" />
@@ -111,6 +123,7 @@
 			<remove name="OPTIONSVerbHandler" />
 			<remove name="TRACEVerbHandler" />
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+			<add name="CertificatesStaticHandler" path="Certificate/*" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 		</handlers>
 		<rewrite>
 			<rules>
