--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="ApprovalUtilities" version="3.0.10" targetFramework="net45" />
   <package id="Bitrium.Http.Extensions" version="1.1.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
