--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -99,6 +99,9 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Ionic.Zip">
+      <HintPath>..\packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="JetBrains.Annotations, Version=10.1.4.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <HintPath>..\packages\JetBrains.Annotations.10.1.4\lib\net20\JetBrains.Annotations.dll</HintPath>
       <Private>True</Private>
@@ -293,6 +296,8 @@
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="codemirror\CsCompleterGenerator.cs" />
+    <Compile Include="Controllers\CertificatesController.cs" />
+    <Compile Include="DataContexts\CertificatesRepo.cs" />
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Controllers\AuthenticationManager.cs" />
     <Compile Include="Controllers\CommentsBot.cs" />
@@ -307,6 +312,12 @@
     <Compile Include="Migrations\201612200725559_EnablingManualCheckingForGroups.Designer.cs">
       <DependentUpon>201612200725559_EnablingManualCheckingForGroups.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612262110312_AddCertificates.cs" />
+    <Compile Include="Migrations\201612262110312_AddCertificates.Designer.cs">
+      <DependentUpon>201612262110312_AddCertificates.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Certificate.cs" />
+    <Compile Include="Models\CertificateTemplate.cs" />
     <Compile Include="Models\FilterOptions.cs" />
     <Compile Include="DataContexts\SlideCheckingsRepo.cs" />
     <Compile Include="Migrations\201608231750470_SlideChecking.cs" />
@@ -853,6 +864,9 @@
     <EmbeddedResource Include="Migrations\201612200725559_EnablingManualCheckingForGroups.resx">
       <DependentUpon>201612200725559_EnablingManualCheckingForGroups.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612262110312_AddCertificates.resx">
+      <DependentUpon>201612262110312_AddCertificates.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="codemirror\addon\comment\comment.js" />
@@ -1216,6 +1230,7 @@
     <Content Include="Properties\webjobs-list.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\buttons.js" />
+    <Content Include="Scripts\certificates-editor.js" />
     <Content Include="Scripts\clipboard.min.js" />
     <Content Include="Scripts\groups-editor.js" />
     <Content Include="Scripts\jquery-ui.min.js" />
@@ -1480,6 +1495,9 @@
     <Content Include="Web.Kontur.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="Views\Certificates\Certificate.cshtml" />
+    <None Include="Views\Admin\Certificates.cshtml" />
+    <Content Include="Views\Certificates\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
