--- a/src/CourseTool/packages.config
+++ b/src/CourseTool/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.0.119-alpha" targetFramework="net45" />
+  <package id="Common.Logging" version="2.0.0" targetFramework="net461" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
@@ -10,5 +11,6 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
+  <package id="NHttp" version="0.1.9.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
 </packages>
