Added bunch of certificate variables Added certificate template Instructors and course admins can remove certificates Fix some bugs: duplicate variables, ui bug

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1181,6 +1181,7 @@
     <Content Include="Content\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\fonts\FontAwesome.otf" />
+    <Content Include="Content\certificate-template.zip" />
     <None Include="encoding.xsd">
       <SubType>Designer</SubType>
     </None>
