--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -162,6 +162,7 @@
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.16\lib\net45\Microsoft.Threading.Tasks.Extensions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -1508,6 +1509,8 @@
     <Content Include="Views\Admin\Certificates.cshtml" />
     <Content Include="Views\Certificates\List.cshtml" />
     <Content Include="Views\Account\UserMenuPartial.cshtml" />
+    <Content Include="Views\Admin\PreviewCertificates.cshtml" />
+    <Content Include="Views\Admin\GenerateCertificatesError.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
