Solve ForgetAll button bug via dependencies refactoring: * Remove parameterless repo constructors (to prevent multiple dettached ulearndbs bugs) * SlideCheckingRepo: Add AsNoTracking to correctly handle just solved exercise. * Add RemoveSlideAction extension method (see EfDbExtensions.cs)

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -300,6 +300,7 @@
     <Compile Include="Controllers\CertificatesController.cs" />
     <Compile Include="DataContexts\AdditionalScoresRepo.cs" />
     <Compile Include="DataContexts\CertificatesRepo.cs" />
+    <Compile Include="Extensions\EfDbExtensions.cs" />
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Controllers\AuthenticationManager.cs" />
     <Compile Include="Controllers\CommentsBot.cs" />
@@ -382,6 +383,7 @@
     </Compile>
     <Compile Include="Models\ExerciseCodeReview.cs" />
     <Compile Include="Models\ExerciseCodeReviewModel.cs" />
+    <Compile Include="Models\ISlideAction.cs" />
     <Compile Include="Models\SlideChecking.cs" />
     <Compile Include="Models\CourseInstructorNavbarViewModel.cs" />
     <Compile Include="DataContexts\CommentsRepo.cs" />
