Archived groups: add old groups to archive.
Instructors now can copy group from another cours
Instructors and course admins can change group's owner
Show all users in group if filter by group or by 'My groups' is selected in analytics
Smooth scrolling supports multiple targets for collapsing and scrolling

Fix bug: show correct slide max score if manual checking is disabled for current user
Fix some bugs, change some texts and styles

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1314,6 +1314,7 @@
     <Content Include="Scripts\slide-utils.js" />
     <Content Include="Scripts\slide-versions.js" />
     <Content Include="Scripts\table-configurator.js" />
+    <Content Include="Scripts\tooltips.js" />
     <Content Include="Scripts\user-group-name-change.js" />
     <Content Include="Scripts\users-list.js" />
     <Content Include="Scripts\_references.js" />
