Non delete submissins option for RunCsJob

--- a/src/RunCsJob.Service/App.config
+++ b/src/RunCsJob.Service/App.config
@@ -13,6 +13,8 @@
 		<add key="ulearn.runcsjob.threadsCount" value="1"/>
 		<!-- Directory for compiling msbuild solutions. By default it's ./submissions in current directory -->
 		<add key="ulearn.runcsjob.submissionsWorkingDirectory" value="" />
+		<!-- Delete submissions after checking -->
+		<add key="ulearn.runcsjob.deleteSubmissions" value="true" />
 	</appSettings>
 	<log4net>
 		<root>
