--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -8,6 +8,7 @@
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF"/>
 		<add key="sleepSeconds" value="1"/>
 		<add key="jobsToRequest" value="5"/>
+		<add key="ulearn.runcsjob.deleteSubmissions" value="true" />
 	</appSettings>
 	<startup> 
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
