Transaction for new LTI users
Telegram bots for errors
Logging errors to log file

Hide 404 from elmah
404 for course not found exception

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -54,9 +54,12 @@
 			 перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
 		<add key="ulearn.requireHttps" value="true" />
 
-		<!-- Данные для отправки новых комментариев в телеграм-канал -->
-		<add key="telegram-commentsbot-token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
-		<add key="telegram-commentsbot-channel" value="@ulearncommentsdev" />
+		<!-- Данные для интеграции с телеграмом -->
+		<add key="ulearn.telegram.token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
+		<!-- Канал, куда отправлять новые комментарии -->
+		<add key="ulearn.telegram.comments.channel" value="@ulearncommentsdev" />
+		<!-- Канал, куда отправлять информацию об ошибках -->
+		<add key="ulearn.telegram.errors.channel" value="@ulearnerrorsdev" />
 
 		<!-- Данные для отправки электронной почты с помощью SendGrid -->
 		<add key="SendGrid.Login" value="" />
@@ -91,7 +94,7 @@
 	
 		<globalization culture="ru-RU" uiCulture="ru" />
 		<httpModules>
-			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+			<add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" />
 			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
 			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
 		</httpModules>
@@ -99,7 +102,7 @@
 	<system.webServer>
 		<modules>
 			<remove name="FormsAuthenticationModule" />
-			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+			<add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" preCondition="managedHandler" />
 			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
 			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
 		</modules>
@@ -220,6 +223,11 @@
 		<security allowRemoteAccess="1" />
 		<!--errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200" /-->
 		<errorLog type="Elmah.XmlFileErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" logPath="~/App_Data" />
+		<errorFilter>
+			<test>
+				<equal binding="HttpStatusCode" value="404" type="Int32" />
+			</test>
+		</errorFilter>
 	</elmah>
 	<location path="elmah">
 		<!-- Управление доступом в самой Elmah не работает :( https://github.com/alexanderbeletsky/elmah-mvc/issues/28 -->
