Remove telegram channels for developers environment

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -57,9 +57,9 @@
 		<!-- Данные для интеграции с телеграмом -->
 		<add key="ulearn.telegram.token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
 		<!-- Канал, куда отправлять новые комментарии -->
-		<add key="ulearn.telegram.comments.channel" value="@ulearncommentsdev" />
+		<add key="ulearn.telegram.comments.channel" value="" />
 		<!-- Канал, куда отправлять информацию об ошибках -->
-		<add key="ulearn.telegram.errors.channel" value="@ulearnerrorsdev" />
+		<add key="ulearn.telegram.errors.channel" value="" />
 
 		<!-- Данные для отправки электронной почты с помощью SendGrid -->
 		<add key="SendGrid.Login" value="" />
