Mark visit as HasManualChecking after set up old solution for manual checking in group
GetUnhandledSubmissions now tries 3 times before throw exception
Some fixes

--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -131,6 +131,7 @@
     <Compile Include="CSharp\CsMembersRemover.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="FileSystemExtensions.cs" />
+    <Compile Include="FuncUtils.cs" />
     <Compile Include="ISolutionValidator.cs" />
     <Compile Include="ExerciseSlide.cs" />
     <Compile Include="ExpectedOutput.cs" />
