--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1554,6 +1554,7 @@
     <Content Include="Views\Admin\GenerateCertificatesError.cshtml" />
     <Content Include="Views\Shared\_UlearnUpdatesInvitation.cshtml" />
     <Content Include="Views\Shared\_YandexMetrika.cshtml" />
+    <Content Include="Views\Analytics\CourseStatistics.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
