Enhanced course statistics: extended scoring groups, filter by scoring group
Added hepler class DefaultDictionary
Visible tabs in code review

--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -129,6 +129,7 @@
     <Compile Include="CSharp\RecursionStyleValidator.cs" />
     <Compile Include="CSharp\RedundantIfStyleValidator.cs" />
     <Compile Include="CSharp\CsMembersRemover.cs" />
+    <Compile Include="DefaultDictionary.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="FileSystemExtensions.cs" />
     <Compile Include="FuncUtils.cs" />
